[package]
description = "Created with Anchor"
edition = "2021"
name = "escrow"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow"

[features]
anchor-debug = []
cpi = ["no-entrypoint"]
custom-heap = []
custom-panic = []
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = {version = "1.0.2", features = ["init-if-needed"]}
anchor-spl = "1.0.2"

[dev-dependencies]
litesvm = "0.12.0"
solana-keypair = "3.0.1"
solana-message = "4.2.1"
solana-signer = "3.0.0"
solana-transaction = "4.1.3"

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(target_os, values("solana"))']}
